--- a/src/app/components/clienti/dettaglio-clienti/dettaglio-clienti.component.scss
+++ b/src/app/components/clienti/dettaglio-clienti/dettaglio-clienti.component.scss
@@ -1,3 +1,19 @@
-.card-body {
+#cardCliente {
     text-align: center;
+    margin-top: 2%;
+    font-size: 1.5rem!important;
+}
+
+button {
+    margin: 4%;
+}
+
+#fattura {
+    justify-content: space-around;
+}
+
+#cardFatt {
+    height: 350px;
+    padding: 1%;
+    margin: 3%;
 }
