--- a/src/app/components/clienti/lista-clienti/lista-clienti.component.scss
+++ b/src/app/components/clienti/lista-clienti/lista-clienti.component.scss
@@ -15,3 +15,20 @@
 .modal-dialog {
     align-items: center;
 }
+
+#testa {
+    margin: 0;
+    align-items: space-between;
+}
+
+#ricerca {
+    align-items: center;
+    text-align: center!important;
+    display: inline-block;
+    margin: 10px;
+    width: 45%;
+}
+
+label {
+    font-size: 1rem!important;
+}
