--- a/src/app/components/fatture/nuova-fattura/nuova-fattura.component.html
+++ b/src/app/components/fatture/nuova-fattura/nuova-fattura.component.html
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group mb-2">
                 <label for="ragioneSociale">Cliente *</label>
-                <select formControlName="ragioneSociale" name="ragioneSociale" id="ragioneSociale">
+                <select formControlName="ragioneSociale" name="ragioneSociale" id="ragioneSociale" class="form-select form-select-sm">
                 <option [value]="cliente.id" *ngFor="let cliente of clienti">{{cliente.ragioneSociale}}</option>
               </select>
             </div>
@@ -30,10 +30,11 @@
             <option [value]="tipo.id" *ngFor="let tipo of tipi;">{{tipo.nome}}</option>
           </select>
             </div>
-
-            <button class="btn btn-primary mt-3 mb-3" type="submit">
+            <div class="d-grid gap-2">
+                <button class="btn btn-primary mt-3 mb-3" type="submit">
           Crea
         </button>
+            </div>
         </form>
     </div>
 </div>
